--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
+docker_machine_master: 127.0.0.1
+docker_machine_executable: docker-machine
 docker_machine_create: false
 docker_machine_remove: false
 docker_machine_manage_config: false
