--- a/tasks/docker_machine_check.yml
+++ b/tasks/docker_machine_check.yml
@@ -2,7 +2,7 @@
 - block: # Check and install Docker Machine
   - name: Get version of Docker Machine
     shell: docker-machine version | awk '{print substr($3, 1, length($3)-1)}'
-    delegate_to: 127.0.0.1
+    delegate_to: "{{ docker_machine_master }}"
     register: docker_machine_version
 
   # TODO Find the way to check version and better way to install docker machine
@@ -12,7 +12,7 @@
   #     dest: "{{ docker_machine_install_path }}"
   #     mode: 0755
   #     force: yes
-  #   delegate_to: 127.0.0.1
+  #   delegate_to: "{{ docker_machine_master }}"
   #   become: true
   #   when: docker_machine_version.stdout <= docker_machine_install_version
 
