--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,7 @@ docker_machine_install_version: 0.8.0
 docker_machine_install_url: https://github.com/docker/machine/releases/download/v{{ docker_machine_install_version }}/docker-machine-{{ ansible_system }}-{{ ansible_architecture }}
 docker_machine_install_path: /usr/local/bin/docker-machine
 #docker_machine_extra_parameters: --engine-opt live-restore --engine-storage-driver overlay2 --engine-registry-mirror https://registry-mirror.example.com
+docker_machine_ip_address: ~
 
 docker_machine_storage_path: "{{ playbook_dir }}/files/docker-machine"
 docker_machine_config_file: "{{ docker_machine_storage_path }}/machines/{{ inventory_hostname }}/config.json"
