--- a/tasks/docker_machine_create.yml
+++ b/tasks/docker_machine_create.yml
@@ -23,15 +23,15 @@
     delegate_to: "{{ docker_machine_master }}"
     when: docker_machine_host_check.stat.exists and docker_machine_remove
 
+  # Здесь используется результат dig на inventory_hostname в качестве ip адреса
+  # для ssh подключения к хосту (если он не задан напрямую), потому что
   # can't use ansible_host if it is not set explicitly because of 'delegate_to'
   # see https://github.com/ansible/ansible/issues/14958
-  - debug: msg={{ lookup('dig', inventory_hostname) }}
-    delegate_to: "{{ docker_machine_master }}"
   - name: Create Docker Machine
     command: |
       {{ docker_machine_executable }} create --driver generic
       --generic-ssh-user root
-      --generic-ip-address {{ lookup('dig', inventory_hostname) }}
+      --generic-ip-address {{ docker_machine_ip_address|default(lookup('dig', inventory_hostname)) }}
       {{ docker_machine_extra_parameters|default('') }}
       {{ inventory_hostname }}
     delegate_to: "{{ docker_machine_master }}"
