--- a/tasks/docker_machine_update.yml
+++ b/tasks/docker_machine_update.yml
@@ -15,3 +15,10 @@
     cache_valid_time: 600
     name: "docker-ce{{ '=' + docker_machine_docker_ce_version if docker_machine_docker_ce_version != 'latest' else '' }}"
     state: present
+
+- name: Update docker-ce-cli
+  apt:
+    update_cache: yes
+    cache_valid_time: 600
+    name: "docker-ce-cli{{ '=' + docker_machine_docker_ce_version if docker_machine_docker_ce_version != 'latest' else '' }}"
+    state: present
